--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,10 +7,10 @@ html {
 }
 
 body {
+  background-color: transparent;
   margin: 0;
   padding: 0;
   font-family: "Pretendard Regular";
-  background-color: #ffde03;
   color: #111;
   word-wrap: break-word;
   font-kerning: normal;
