--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ h6 {
 
 h2 {
   display: block;
+  align-items: center;
   font-size: 1.5em;
   margin-top: 0.83em;
   margin-bottom: 0.83em;
@@ -40,6 +41,12 @@ h2 {
   margin-right: 0;
   font-weight: thin;
 }
+
+.icon {
+    display:inline-block;
+    vertical-align: -2px;
+}
+
 
 p {
   font-size: 1.2em;
