--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -147,11 +147,34 @@ hr {
   text-align: right;
   font-size: 0.9em;
 }
-
-.card {
+.blogCard {
+  display: flex;
+  align-items: center;
+  font-size: 1.1em;
+  height: 40px;
+  width : 280px;
+  margin-top : 35px;
+  color : black;
+  padding: 5px 25px;
+  background-color : white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 30px;
+}
+.noticeCard {
+  width : 95%;
   margin-top : 35px;
   background-color : white;
-  padding: 5px 16px;
+  padding: 3px 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+.card {
+  width : 70%;
+  margin-top : 35px;
+  background-color : white;
+  padding: 5px;
+
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
