--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,7 +153,7 @@ hr {
   font-size: 1.1em;
   height: 40px;
   width : 280px;
-  margin-top : 35px;
+  margin-top : 30px;
   color : black;
   padding: 5px 25px;
   background-color : white;
@@ -161,6 +161,13 @@ hr {
   transition: 0.3s;
   border-radius: 30px;
 }
+
+.blogCard:hover {
+background-color: #ff0266;
+color: #fff;
+
+}
+
 .noticeCard {
   width : 95%;
   margin-top : 35px;
