--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -132,6 +132,21 @@ hr {
   font-size: 1em;
 }
 
+.tagbtn {
+  background-color: #0336ff;
+  color :#fff;
+  height: 2rem;
+  font-size: 0.75rem;
+  border-radius: 0.75rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.15rem;
+  padding-bottom: 0.15rem;
+
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .etc {
   color: #333333;
   line-height: 1.2;
