--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,22 @@ h6 {
   color: black;
   font-family: "Pretendard Light";
 }
-
+.blogTitle {
+  font-family: "Pretendard Regular";
+  display: block;
+  align-items: center;
+  font-size: 2em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+}
+.blogSub {
+  color: #ff0266;
+  line-height: 1.2;
+  text-align: left;
+  font-size: 0.9em;
+}
 h2 {
   display: block;
   align-items: center;
@@ -133,7 +148,7 @@ hr {
 }
 
 .tagbtn {
-  background-color: #0336ff;
+  background-color: #333333;
   color :#fff;
   height: 2rem;
   font-size: 0.75rem;
@@ -146,7 +161,12 @@ hr {
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
 }
-
+.tagbtn:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+  border: none;
+  background-color: #ff0266;
+}
 .etc {
   color: #333333;
   line-height: 1.2;
