--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,10 +32,19 @@ h6 {
 }
 
 img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   object-fit: contain;
 }
+
+li {
+  padding: 5px 0px 5px 5px;
+  margin-bottom: 5px;
+  border-bottom: 0px solid #efefef;
+  font-size: 1em;
+}
+
+
 
 .blogTitle {
   font-family: "Pretendard Regular";
