--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,10 @@ img {
   max-width: 80%;
   height: auto;
   object-fit: contain;
+  margin-left: auto; 
+  margin-right: auto; 
+  display: block;
+
 }
 
 li {
