--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,6 +66,17 @@ li {
   text-align: left;
   font-size: 0.9em;
 }
+
+.blogNav {
+  margin-top: 30px;
+  text-align: center;
+}
+.blogNav a{
+  color:#ff0266;
+  font-size: 1.2em;
+  line-height: 1.3;
+  text-decoration: underline;
+}
 h2 {
   display: block;
   align-items: center;
