--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,4 +1,4 @@
-@import "../styles/typography.css";
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 .heading {
   color: #cfff04;
