--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background-color: transparent;
+  background-color: #ffde03;
   margin: 0;
   padding: 0;
   font-family: "Noto Sans KR", sans-serif;
