--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,10 +35,9 @@ img {
   max-width: 80%;
   height: auto;
   object-fit: contain;
-  margin-left: auto; 
-  margin-right: auto; 
+  margin-left: auto;
+  margin-right: auto;
   display: block;
-
 }
 
 li {
@@ -48,6 +47,44 @@ li {
   font-size: 1em;
 }
 
+input {
+  width: 100%;
+  margin: 10px;
+  padding: 15px;
+  border: none;
+  background-color: transparent;
+  border-bottom: 2px solid #ff0266;
+  font-size: 1.3em;
+  color: #111;
+}
+
+textarea {
+  width: 100%;
+  margin: 10px;
+  margin-bottom: 30px;
+  height: 60px;
+  padding: 15px;
+  border: none;
+  background-color: transparent;
+  border-bottom: 2px solid #ff0266;
+}
+
+textarea::placeholder {
+  font-size: 1.3em;
+}
+
+.contactBtn {
+  width: 30%;
+  height: 50px;
+  color: #fff;
+  background-color: black;
+  font-size: 1.1em;
+  font-family: "Noto Sans KR";
+  border: 0px solid black;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 10px;
+}
 
 
 .blogTitle {
@@ -71,8 +108,8 @@ li {
   margin-top: 30px;
   text-align: center;
 }
-.blogNav a{
-  color:#ff0266;
+.blogNav a {
+  color: #ff0266;
   font-size: 1.2em;
   line-height: 1.3;
   text-decoration: underline;
@@ -180,7 +217,7 @@ hr {
 
 .tagbtn {
   background-color: #333333;
-  color :#fff;
+  color: #fff;
   height: 2rem;
   font-size: 0.75rem;
   border-radius: 0.75rem;
@@ -241,7 +278,6 @@ hr {
     width: 90%;
     font-size: 0.9em;
   }
-  
 }
 
 .blogCard:hover {
@@ -251,7 +287,7 @@ hr {
 
 .noticeCard {
   width: 95%;
-  max-width : 450px;
+  max-width: 450px;
   margin-top: 35px;
   background-color: white;
   padding: 3px 3px;
@@ -300,7 +336,7 @@ hr {
 .topBlank {
   height: 50px;
 }
-.anchorLink{
+.anchorLink {
   color: #ff0266;
 }
 
